apps/base/elastic/eck.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    toolkit.fluxcd.io/tenant: kog-team
