apps/base/elastic/elastic-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata: 
  name: elastic-ingress
  namespace: elastic-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`elastic.local.reinthal.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: elastic-system
      services:
        - name: elasticsearch-es-http
          port: 9200
  tls:
    secretName: local-reinthal-cc-tls
