apps/base/elastic/kibana-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingress
  namespace: elastic-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kibana.local.reinthal.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: elastic-system
      services:
        - name: kibana-kb-http
          port: 5601
  tls:
    secretName: local-reinthal-cc-tls
